--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     "require": {
         "php": "^8.2",
         "dompdf/dompdf": "^3.1",
+        "endroid/qr-code": "*",
         "greenter/lite": "^5.1",
         "laravel-lang/common": "^6.7",
         "laravel/framework": "^12.0",
