--- a/.env.beta
+++ b/.env.beta
@@ -1,8 +1,8 @@
-APP_NAME="API Facturación SUNAT"
-APP_ENV=production
+APP_NAME="API Facturación SUNAT - BETA"
+APP_ENV=staging
 APP_KEY=
 APP_DEBUG=false
-APP_URL=https://your-domain.com
+APP_URL=https://beta.your-domain.com
 
 APP_LOCALE=es
 APP_FALLBACK_LOCALE=es
@@ -18,20 +18,20 @@ BCRYPT_ROUNDS=12
 LOG_CHANNEL=stack
 LOG_STACK=daily
 LOG_DEPRECATIONS_CHANNEL=null
-LOG_LEVEL=error
+LOG_LEVEL=info
 
 DB_CONNECTION=mysql
 DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=production_database_name
-DB_USERNAME=production_username
-DB_PASSWORD=secure_production_password
+DB_DATABASE=beta_database_name
+DB_USERNAME=beta_username
+DB_PASSWORD=secure_beta_password
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=480
 SESSION_ENCRYPT=true
 SESSION_PATH=/
-SESSION_DOMAIN=.your-domain.com
+SESSION_DOMAIN=.beta.your-domain.com
 
 BROADCAST_CONNECTION=log
 FILESYSTEM_DISK=local
@@ -53,7 +53,7 @@ MAIL_HOST=smtp.your-provider.com
 MAIL_PORT=587
 MAIL_USERNAME=your_email@domain.com
 MAIL_PASSWORD=your_email_password
-MAIL_FROM_ADDRESS="noreply@your-domain.com"
+MAIL_FROM_ADDRESS="noreply@beta.your-domain.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
@@ -63,21 +63,21 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 # Sanctum Configuration
-SANCTUM_STATEFUL_DOMAINS=your-domain.com,www.your-domain.com
+SANCTUM_STATEFUL_DOMAINS=beta.your-domain.com
 SANCTUM_EXPIRATION=1440
-SANCTUM_TOKEN_PREFIX=sunat_
-SANCTUM_VERIFY_IP=true
+SANCTUM_TOKEN_PREFIX=sunat_beta_
+SANCTUM_VERIFY_IP=false
 SANCTUM_LOG_USAGE=true
 SANCTUM_MAX_INACTIVITY=120
 SANCTUM_MAX_TOKENS=10
 SANCTUM_ROTATE_TOKENS=false
-SANCTUM_PURGE_DAYS=30
+SANCTUM_PURGE_DAYS=7
 
-# SUNAT Configuration (Configurar según ambiente)
-SUNAT_ENVIRONMENT=production
-SUNAT_CERTIFICATE_PATH=
+# SUNAT Configuration - BETA Environment
+SUNAT_ENVIRONMENT=beta
+SUNAT_CERTIFICATE_PATH=storage/certificates/beta/certificado.p12
 SUNAT_CERTIFICATE_PASSWORD=
-SUNAT_PRIVATE_KEY_PATH=
+SUNAT_PRIVATE_KEY_PATH=storage/certificates/beta/private.key
 
 # Files Configuration
 FILES_STORAGE_PATH=storage/app/sunat
